--- a/hanwha/hanwhacss/hanwha.css
+++ b/hanwha/hanwhacss/hanwha.css
@@ -3,21 +3,26 @@
   margin: 0;
   padding: 0;
 }
-html {
-  scroll-behavior: smooth;
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
 }
-/* html,
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #b3b3b3;
+}
+::-webkit-scrollbar-track {
+  background-color: #333;
+}
+html,
 body {
-   height: 100%;
-  background: #000;
-} */
+  height: 100%;
+}
 
 body {
-  /* background-color: #0a1320; */
   background-color: #000;
   font-family: "01HanwhaB", sans-serif;
   color: #fff;
-  /* overflow-x: hidden; */
 }
 a {
   text-decoration: none;
@@ -63,7 +68,6 @@ header {
   border-top: none;
   z-index: 50;
 }
-
 .main-menu li {
   list-style: none;
   position: relative;
@@ -85,18 +89,7 @@ header {
   visibility: visible;
   transform: translateY(0);
 }
-.bgmenu {
-  position: absolute;
-  width: 100%;
-  height: 60px;
-  background: rgba(0, 0, 0, 0.6);
-  left: 0;
-  top: 80px;
-  display: none;
-}
-.main-menu:hover ~ .bgmenu {
-  /* display: block; */
-}
+
 .submenu {
   display: flex;
   flex-direction: row;
@@ -145,13 +138,14 @@ header {
   color: #fff;
 }
 
-section.bg {
+section {
   position: relative;
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
   /* margin-top: 80px; */
 }
+
 .social-media {
   position: fixed;
   right: 20px;
@@ -173,6 +167,13 @@ section.bg {
   background-size: contain;
   background-repeat: no-repeat;
 }
+video,
+img {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
 
 .bg-video {
   /* position: absolute;
@@ -188,41 +189,21 @@ section.bg {
 .auto-slide {
   position: relative;
   width: 100%;
-  /* overflow: hidden; */
-
-  /* height: 100vh; */
-}
-.auto-slide .swiper {
-  width: 100%;
-  /* height: 100%; */
-  overflow: visible;
-  padding-top: 150px;
-  box-sizing: border-box;
-}
-
-.auto-slide .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  /* background: #444; */
+  overflow-x: hidden;
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 712px;
-  height: 680px;
+  justify-content: center;
+  height: 100vh;
+  filter: brightness(70%);
 }
-.auto-slide .swiper-slide:nth-child(even) {
-  margin-top: -50px;
-}
-.auto-slide .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: brightness(50%);
-}
-.auto-slide .swiper-slide:hover img {
+
+.slide-track {
+  display: flex;
+  width: max-content;
+  animation: scroll 80s linear infinite;
   filter: brightness();
 }
+
 .slide-track img {
   width: 718px;
   height: auto;
@@ -231,10 +212,12 @@ section.bg {
   transition: transform 0.3s;
 }
 
+.slide-track img:hover {
+  transform: scale(1.05);
+}
 .gallery_btn {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
 }
 
 .btn {
@@ -266,16 +249,20 @@ section.bg {
 .btn:hover:before {
   width: 100%;
 }
-/* section {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 1s ease, transform 1s ease;
-} */
 
 section.visible {
   opacity: 1;
   transform: translateY(0);
 }
+section,
+video,
+img {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
 .news-section {
   width: 100%;
   background: #000;
@@ -472,7 +459,8 @@ footer {
   color: #fff;
   font-size: 13px;
   text-decoration: none;
-  transition: 0.3s;
+  transition: 1s;
+  animation: 1.5s;
 }
 
 .topbtn a:hover {
