--- a/hanwha/hanwhacss/hanwha.css
+++ b/hanwha/hanwhacss/hanwha.css
@@ -221,6 +221,7 @@ img {
 }
 
 .btn {
+  font-family: "01HanwhaB", sans-serif;
   display: inline-block;
   overflow: hidden;
   height: 62px;
@@ -241,7 +242,9 @@ img {
   top: 0;
   background: rgba(243, 115, 33, 0.8);
   transition: 0.5s;
+  
 }
+
 .btn > a {
   position: relative;
   z-index: 2;
