--- a/yoajung/css/yoajung.css
+++ b/yoajung/css/yoajung.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+/* 시작 */
 font-face {
   font-family: "Pretendard";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Regular.woff2")
@@ -81,6 +82,7 @@ body {
 }
 
 .subimgtext .sub1 {
+ font-family: "Pretendard", sans-serif;
   text-align: left;
   width: 300px;
   height: 60px;
@@ -120,6 +122,8 @@ body {
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  padding: 100px 0;
+
 }
 .api {
   position: relative;
@@ -144,6 +148,24 @@ body {
   text-decoration: none;
   font-weight: 500;
   text-align: center;
+}
+.con {
+  width: 60%;
+  justify-content: center;
+  position: relative;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  font-size: 30px;
+  height: 50%;
+}
+.best {
+  display: flex;
+}
+.best img {
+  padding: 20px;
+
+
 }
 
 @media (max-width: 768px) {
