--- a/yoajung/css/yoajung.css
+++ b/yoajung/css/yoajung.css
@@ -123,6 +123,7 @@ body {
   display: flex;
   justify-content: center;
   padding: 100px 0;
+      flex-direction: row;
 
 }
 .api {
@@ -167,6 +168,63 @@ body {
 
 
 }
+.swiper-container {
+  width: 922px;
+  overflow: hidden;
+  margin: 50px auto;
+}
+
+.swiper-wrapper {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.slide {
+  min-width: 208px;
+  margin-right: 30px;
+}
+
+.slide img {
+  width: 100%;
+  display: block;
+  border-radius: 20px;
+}
+.best-category {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end; /* 오른쪽 정렬 */
+  margin-bottom: 4%;
+  width: 40%;
+  gap: 20px;
+}
+
+/* 탭 링크 스타일 */
+.best-category a.tab {
+  color: #000;
+  text-decoration: none;
+  font-size: 22px;
+  transition: 0.2s;
+}
+
+/* 활성 탭 */
+.best-category a.tab.active {
+  color: #f73c5a;
+  font-weight: 700;
+}
+
+/* 비활성 탭 hover */
+.best-category a.tab:hover {
+  opacity: 0.7;
+}
+
+/* 구분선 스타일 */
+.best-category .bar {
+  pointer-events: none; /* 클릭 방지 */
+  color: #777;
+  font-weight: 500;
+}
+
+
 
 @media (max-width: 768px) {
   .api img {
